# magit-benkyo

./: .gitignore  CMakeLists.txt  README.md
src/: calc.cpp  calc.h  main.cpp
